<resources>
    <string name="app_name">GameBox</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Open</string>
    <string name="etrEmail">Enter Email</string>
    <string name="etrPassword">Enter Password</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="no_account">Don\'t have an account? Sign Up</string>
    <string name="have_account">Already have account? Sign In</string>
    <string name="signing_in">Signing In</string>
    <string name="signing_out">Signing Out</string>
    <string name="creating_acc">Creating Account</string>
    <string name="signed_in">Signed In</string>
    <string name="pleaseEtr">Enter Correct Email and Password</string>
</resources>
