<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_gravity="center_horizontal|center_vertical"
    android:layout_marginHorizontal="@dimen/padding_signin_signup"
    tools:context=".SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04000002">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="108dp"
                android:layout_height="108dp"
                app:cardCornerRadius="54dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/profilePic"
                    android:layout_width="109dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/profile_pic_placeholder"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/imagePickerBtn"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:clickable="true"
                app:backgroundTint="@android:color/holo_orange_dark"
                app:fabCustomSize="35dp"
                app:fabSize="normal"
                app:layout_constraintBottom_toBottomOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.65"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cardView"
                app:layout_constraintVertical_bias="1.0"
                app:maxImageSize="24dp"
                app:srcCompat="@drawable/photo_camera"
                tools:ignore="SpeakableTextPresentCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/signup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="enter username"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_email" />

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="enter email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:layout_editor_absoluteX="30dp" />


        <EditText
            android:id="@+id/signup_conPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="Comfirm password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_pass" />

        <EditText
            android:id="@+id/signup_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/etrPassword"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_username" />

        <Button
            android:id="@+id/signupBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Showpass_signup" />

        <TextView
            android:id="@+id/haveacc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/have_account"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signupBtn" />

        <CheckBox
            android:id="@+id/Showpass_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:buttonTint="@color/white"
            android:text="Show Password"
            android:textColor="@color/orange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_conPass" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>